# LrGeniusAI

./: .gitignore  .luacheckrc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md
scripts/: generate_release_notes.py  generate_test_manifest.py  (+2 more)
server/: Dockerfile  pyproject.toml
server/scripts/: lint_format.sh
server/src/: config.py  geniusai_server.py  server_lifecycle.py
server/src/providers/: base.py  chatgpt.py  gemini.py  lmstudio.py  ollama.py
server/src/routes/: clip.py  db.py  edit.py  faces.py  import_.py  index.py  keywords.py  search.py  server.py  style_edit.py  training.py
server/src/scripts/: updater.py
server/src/services/: chroma.py  clip.py  db.py  exif.py  face.py  import_.py  index.py  jobs.py  keywords.py  metadata.py  persons.py  search.py  style_engine.py  training.py  update.py  version.py  vertexai.py
server/src/utils/: edit_recipe.py  open_clip_compat.py
server/test/: api_test_client.py  dump_photo_metadata.py  test_api_endpoints.py  test_chroma_photo_id.py  test_config.py  test_edit_recipe.py  test_flatten_keywords.py  test_image_to_base64.py  test_jobs.py  test_keyword_routes.py  test_keyword_service.py  test_llm_provider_response_parsing.py  test_normalize_keywords_structure.py  test_provider_is_available.py  test_routes_db.py  test_routes_index_by_reference.py  test_routes_index_options.py  test_routes_server.py  test_safe_unit_interval.py  test_service_db.py  test_service_metadata.py  test_service_update.py  test_smart_filter.py  test_style_engine.py  test_version_info.py  verify_style_engine.py
(+59 files in other folders)
