[project]
name = "genius-server"
version = "0.1.0"
description = "Flask server to handle plugin requests to LLMs and Metadata"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "chromadb>=1.5.8",
    "flask>=3.1.3",
    "ftfy>=6.3.1",
    "google-cloud-aiplatform>=1.148.1",
    "google-genai>=1.73.1",
    "huggingface-hub>=1.12.0",
    "insightface>=0.7.3",
    "lmstudio>=1.5.0",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "onnxruntime>=1.25.0",
    "open-clip-torch>=3.3.0",
    "openai>=2.32.0",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "regex>=2026.4.4",
    "requests>=2.33.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "timm>=1.0.26",
    "tokenizers>=0.22.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=4.46",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.ruff.lint]
# E741: ambiguous variable name (single-letter `l`, `I`, `O`). Allowed for
# numerical / scientific code where these names are conventional.
extend-ignore = ["E741"]
